# kexp_plays_dataset

./: .gitignore  .repomixignore  COMMENT_CHUNKING_PROGRESS.md  CORE_ANALYSIS_IMPLEMENTATION.md  README.md  analyze_enrichment_potential.py  build_kexp_knowledge_base.py  cluster_comments.py  create_comment_chunks_analysis.py  create_core_analysis_views.py  create_full_kb_pipeline.py.backup  create_kb_phase_0_1_2.py  create_kb_phase_0_1_2.py.backup  create_kb_schema_rdf.py  download.py  dump_schema.py  entities_phase_1_foundation_extraction.py  fix_categorical_population.py  generate_comment_embeddings.py  ingest_kexp_data.py  ingest_raw_mb_data.py  ingest_topic_model_data.py  normalize_kexp.py  prepare_embedding_update.py  pyproject.toml  reduce_model_outliers.py  remove_commit.sh  report_mb_stats.py  run_mb_verification.py  schema.csv  schema.txt  simple_categorical_extractor.py  vector_search.py
.conda/: aau_token
categorical_output/: categorical_extraction_report_20250610_135852.json  categorical_extraction_report_20250610_135941.json  categorical_extraction_report_20250610_135949.json
docs/: core_analysis.md  kb_population_phase_0_1_2.md  kb_rdf_triples.md  kb_schema.md  kb_schema_extended_.md  kexp_knowledge_base.md  mb_stats.md
enrichment_reports/: mb_relationships_full.csv
migrate/: analyze_legacy_relationships.py
migration_analysis/: migration_analysis_report.json  migration_summary.txt
scripts/: categorical_relationships_extractor.py  clean_up.py  complete_cleanup.py  create_release_label_relationships.py  entities_phase_2_core_extraction.py  (+6 more)
(+1 files in other folders)
