[project]
name = "kexp-data-scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.3.0",
    "mlx>=0.26.0",
    "mlx-embeddings>=0.0.3",
    "mlx-lm>=0.25.0",
    "numpy>=2.2.6",
    "openai>=1.84.0",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]
